fixed scrollbar contrast

--- a/src/index.css
+++ b/src/index.css
@@ -61,10 +61,10 @@ body, #root {
     width: 12px;
 }
 ::-webkit-scrollbar-track {
-    background: gray;
+    background: transparent;
 }
 ::-webkit-scrollbar-thumb {
-    background: black;
+    background: gray;
 }
 ::-webkit-scrollbar-thumb:hover {
     background: #4E4F51;
